# vibetracer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-20-vibetracer.md  2026-03-24-vibetracer-v2.md  2026-03-25-mcp-self-correction.md  2026-03-25-nle-polish.md  2026-03-25-the-bridge-v030.md  2026-03-26-tui-visual-overhaul.md
docs/superpowers/specs/: 2026-03-20-vibetracer-design.md  (+4 more)
homebrew/: vibetracer.rb
scripts/: install.sh
skills/: vibetracer-review.md
src/: auto_detect.rs  claude_log.rs  config.rs  demo.rs  event.rs  lib.rs  main.rs  session.rs  splash.rs  theme.rs
src/analysis/: blast_radius.rs  imports.rs  mod.rs  refactor_tracker.rs  schema_diff.rs  sentinels.rs  watchdog.rs
src/daemon/: agent_registry.rs  correlation.rs  hook_listener.rs  mod.rs  pid.rs
src/equation/: detect.rs  mod.rs  render.rs
src/export/: agent_trace.rs  git_notes.rs  mod.rs
src/hook/: bridge.rs  mod.rs  registration.rs
src/import/: agent_trace.rs  claude.rs  detect.rs  mod.rs  traits.rs
src/mcp/: handlers.rs  mod.rs  pagination.rs  streaming.rs  tools.rs  transport.rs  types.rs
src/pty/: mod.rs
src/recorder/: mod.rs
src/restore/: conflict.rs  mod.rs  restore_log.rs
src/rewind/: mod.rs
src/snapshot/: checkpoint.rs  edit_log.rs  mod.rs  store.rs
src/tui/: alerts.rs  app.rs  blame.rs  bookmarks.rs  event_loop.rs  filter.rs  input.rs  intro.rs  layout.rs  mod.rs  operation.rs  playhead.rs  session_diff.rs  syntax.rs  tailer.rs
src/watcher/: differ.rs  fs_watcher.rs  mod.rs
tests/: export_roundtrip.rs
tests/integration/: blast_radius_test.rs  config_test.rs  equation_test.rs  hook_test.rs  import_test.rs  mcp_test.rs  mcp_workflow_test.rs  mod.rs  refactor_tracker_test.rs  rewind_test.rs  schema_diff_test.rs  sentinel_test.rs  session_test.rs  snapshot_test.rs  watchdog_test.rs  watcher_test.rs
(+20 files in other folders)
