[package]
name = "vibetracer"
version = "0.5.0"
edition = "2024"
description = "Real-time tracing, replaying, and rewinding of AI coding assistant edits. MCP server for AI self-correction. Cross-agent support (Claude Code, Cursor, Codex). Export to Agent Trace JSON and git-ai git notes."
keywords = ["tracing", "ai", "mcp", "debugging", "tui"]
categories = ["command-line-utilities", "development-tools::debugging"]
license = "MIT"
repository = "https://github.com/omeedcs/vibetracer"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
notify-debouncer-mini = "0.5"
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dirs = "6"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
